Fix overflow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -112,6 +112,7 @@ main {
   body {
     height: 100vh;
     width: 100vw;
+    overflow-x: hidden;
   }
 
   main {
